discussion/kv_engine/142940/142940_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Add a constructor from a nullptr_t to TaggedPtr

Otherwise I get the following compilation errors on gcc 10.2.0.

In file included from /usr/include/c++/10.2.0/memory:83,
                 from .../repo-master/kv_engine/engines/ep/src/atomic.h:23,
                 from .../repo-master/kv_engine/engines/ep/src/globaltask.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.h:19,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:18:
/usr/include/c++/10.2.0/bits/unique_ptr.h: In instantiation of ‘std::__uniq_ptr_impl<_Tp, _Dp>::__uniq_ptr_impl(std::__uniq_ptr_impl<_Tp, _Dp>&&) [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>]’:
/usr/include/c++/10.2.0/bits/unique_ptr.h:211:7:   required from here
/usr/include/c++/10.2.0/bits/unique_ptr.h:163:22: error: no match for ‘operator=’ (operand types are ‘std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer’ {aka ‘TaggedPtr<StoredValue>’} and ‘std::nullptr_t’)
  163 |       { __u._M_ptr() = nullptr; }
      |         ~~~~~~~~~~~~~^~~~~~~~~
In file included from .../repo-master/kv_engine/engines/ep/src/blob.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/stored-value.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/hash_table.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:22:
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(const TaggedPtr<StoredValue>&)’
   44 | class TaggedPtr : public TaggedPtrBase {
      |       ^~~~~~~~~
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘const TaggedPtr<StoredValue>&’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(TaggedPtr<StoredValue>&&)’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘TaggedPtr<StoredValue>&&’
In file included from /usr/include/c++/10.2.0/memory:83,
                 from .../repo-master/kv_engine/engines/ep/src/atomic.h:23,
                 from .../repo-master/kv_engine/engines/ep/src/globaltask.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.h:19,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:18:
/usr/include/c++/10.2.0/bits/unique_ptr.h: In instantiation of ‘std::__uniq_ptr_impl<_Tp, _Dp>::pointer std::__uniq_ptr_impl<_Tp, _Dp>::release() [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>; std::__uniq_ptr_impl<_Tp, _Dp>::pointer = TaggedPtr<StoredValue>]’:
/usr/include/c++/10.2.0/bits/unique_ptr.h:167:12:   required from ‘std::__uniq_ptr_impl<_Tp, _Dp>& std::__uniq_ptr_impl<_Tp, _Dp>::operator=(std::__uniq_ptr_impl<_Tp, _Dp>&&) [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>]’
/usr/include/c++/10.2.0/bits/unique_ptr.h:212:24:   required from here
/usr/include/c++/10.2.0/bits/unique_ptr.h:188:11: error: no match for ‘operator=’ (operand types are ‘std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer’ {aka ‘TaggedPtr<StoredValue>’} and ‘std::nullptr_t’)
  188 |  _M_ptr() = nullptr;
      |  ~~~~~~~~~^~~~~~~~~
In file included from .../repo-master/kv_engine/engines/ep/src/blob.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/stored-value.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/hash_table.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:22:
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(const TaggedPtr<StoredValue>&)’
   44 | class TaggedPtr : public TaggedPtrBase {
      |       ^~~~~~~~~
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘const TaggedPtr<StoredValue>&’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(TaggedPtr<StoredValue>&&)’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘TaggedPtr<StoredValue>&&’
make[4]: *** [kv_engine/engines/ep/CMakeFiles/ep_objs.dir/build.make:134: kv_engine/engines/ep/CMakeFiles/ep_objs.dir/src/access_scanner.cc.o] Error 1

(Also add a missing include of <cstdint> which is required with with
GCC 10.)

Change-Id: I27e5492480661ccdba57d7bee5dcd24f8c0ce463

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-01-07 14:15:07.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-01-07 14:16:58.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-01-07 14:26:29.000000000
Message: 
Patch Set 2: Code-Review-1

(1 comment)
Line:21, daemon/function_chain.h -> Why do we need to include cstdint in this file?

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-07 14:31:40.000000000
Message: 
Patch Set 2:

(1 comment)
Line:21, daemon/function_chain.h -> From commit message:

> (Also add a missing include of <cstdint> which is required with with
GCC 10.)

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-07 15:20:16.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32775/ : FAILURE

Compile error at /usr/include/c++/10.2.0/bits/unique_ptr.h:163:22:
error: no match for `operator=" (operand types are `std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer" {aka `TaggedPtr<StoredValue>"} and `std::nullptr_t")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8056/ : FAILURE

Test exceeded the timeout:
[2021-01-07T14:51:49.915Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15874/ : FAILURE

Test exceeded the timeout:
[2021-01-07T14:31:05.968Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4982/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28244/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7938/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8331/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-07 16:53:27.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32775/ : FAILURE

Compile error at /usr/include/c++/10.2.0/bits/unique_ptr.h:163:22:
error: no match for `operator=" (operand types are `std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer" {aka `TaggedPtr<StoredValue>"} and `std::nullptr_t")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8056/ : FAILURE

Test exceeded the timeout:
[2021-01-07T14:51:49.915Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8056/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4982/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28244/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7938/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8331/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15882/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-01-07 21:04:40.000000000
MISMATCHED INLINE COMMENT
Line:21, daemon/function_chain.h -> ah... it was a loooong commit message with tons of make output, but the subject didn't mention that it was gcc 10 fixes but just a new constructor...
----------------------------------------------------------------------------------------------------------------------
